# Athena

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.config.ini  main.py  prompt.txt  pyproject.toml
.github/workflows/: docker-build-push.yml
prompts/: summary_prompt.txt  summary_system_prompt.txt  tag_prompt.txt  tag_system_prompt
