[project]
name = "Athena"
version = "0.1.0"
description = "Autosummarize scientific papers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.4",
    "anthropic>=0.34.1",
    "pypdf>=4.3.1",
    "fastapi>=0.112.2",
    "pyzotero>=1.5.20",
    "uvicorn>=0.30.6",
    "google-generativeai>=0.8.2",
    "tenacity>=9.0.0",
]
